--- a/app/globals.css
+++ b/app/globals.css
@@ -92,3 +92,15 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@keyframes gradient-light {
+  0% {
+    background-position: 50% 0%;
+  }
+  50% {
+    background-position: 50% 100%;
+  }
+  100% {
+    background-position: 50% 0%;
+  }
+}
